# sentiment-mlops-pipeline

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile.airflow  Dockerfile.api  IMPLEMENTATION_NEW_DAGS.md  IMPROVEMENTS.md  Makefile  PRODUCTION_CHECKLIST.md  QUICK_START_NEW_DAGS.md  README.md  SUMMARY_NEW_DAGS.md  docker-compose.yml  logrotate.conf  optuna_study.db  prometheus.yml  pyproject.toml  pytest.ini  requirements.api.txt  requirements.dev.txt  requirements.txt  scripts_windows.ps1  streamlit_app.py
airflow/: entrypoint.sh
artefacts/: best_model.joblib
examples/: logging_demo.py  request_batch.py  request_simple.py
postgres-init/: 00-init-multiple-databases.sh  01-init-airflow-meta.sql  02-init-metrics-db.sql
scripts/: __init__.py  api_service.py  artefact_store.py  config.py  constants.py  data_validation.py  download.py  drift_injection.py  drift_monitor.py  evaluation_reporter.py  feature_contract.py  feature_engineering.py  generate_traffic.py  logging_config.py  model_registry.py  model_service.py  postprocessing.py  profiling.py  request.py  request_batch.py  request_simple.py  retry_utils.py  settings.py  shutdown.py  spark_process.py  text_features.py  train.py  types.py  utils.py  visualization.py
tests/: README.md  conftest.py  requirements.txt  spark_test_fixed.py  test_api_aggregates.py  test_api_feature_contract.py  test_api_service.py  test_api_smoke.py  test_api_snapshot.py  test_api_textblob.py  test_container_data_visibility.py  test_core_modules.py  test_data_validation.py  test_debug_api_service.py  test_device_detection.py  test_distilbert_classifier.py  test_e2e.py  test_e2e_smoke.py  test_edge_cases.py  test_feature_consistency.py  test_feature_contract_used_cols.py  test_feature_importances.py  test_feature_importances_synthetic.py  test_force_flag.py  test_integration.py  test_local_data_check.py  test_logging_config.py  test_mlflow_config.py  test_mock_training.py  test_model_artifacts_creation.py  test_new_dags.py  test_numeric_columns_presence.py  test_parquet_validation.py  test_pipeline_smoke.py  test_real_spark_execution.py  test_real_validation.py  test_sentiment_textblob.py  test_settings_env.py  test_simple_logreg.py  (+2 more)
(+49 files in other folders)
